test: add ipv6 to tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -66,5 +66,6 @@ ADD_CLAR_TEST(online              -v -sonline)
 ADD_CLAR_TEST(gitdaemon           -v -sonline::push)
 ADD_CLAR_TEST(ssh                 -v -sonline::push -sonline::clone::ssh_cert -sonline::clone::ssh_with_paths -sonline::clone::path_whitespace_ssh)
 ADD_CLAR_TEST(proxy               -v -sonline::clone::proxy)
+ADD_CLAR_TEST(anonymous_clone     -v -sonline::clone::anonymous)
 ADD_CLAR_TEST(auth_clone          -v -sonline::clone::cred)
 ADD_CLAR_TEST(auth_clone_and_push -v -sonline::clone::push -sonline::push)
